--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/outer-html.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/outer-html.html
@@ -8,6 +8,9 @@
     <script>
       let text = document.body.firstChild;
       console.log(text.nodeValue, text.data);
+
+      let comment = text.nextSibling;
+      console.log(comment);
     </script>
 
     <script>
