--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/outer-html.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/outer-html.html
@@ -10,7 +10,7 @@
       console.log(text.nodeValue, text.data);
 
       let comment = text.nextSibling;
-      console.log(comment);
+      console.log(comment.nodeValue, comment.data);
     </script>
 
     <script>
