--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
@@ -18,5 +18,9 @@
       elem1.innerHTML = name;
       elem2.textContent = name;
     </script>
+
+    <div>Both divs below are hidden</div>
+
+    <div hidden>With the attribute "hidden"</div>
   </body>
 </html>
