--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
@@ -21,6 +21,11 @@
 
     <div>Both divs below are hidden</div>
 
-    <div hidden>With the attribute "hidden"</div>
+    <div
+      class="hidden"
+      hidden
+    >
+      With the attribute "hidden"
+    </div>
   </body>
 </html>
