--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
@@ -21,11 +21,8 @@
 
     <div>Both divs below are hidden</div>
 
-    <div
-      class="hidden"
-      hidden
-    >
-      With the attribute "hidden"
-    </div>
+    <div hidden>With the attribute "hidden"</div>
+
+    <div id="hidden">JavaScript assigned the property "hidden"</div>
   </body>
 </html>
