--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
@@ -24,5 +24,9 @@
     <div hidden>With the attribute "hidden"</div>
 
     <div id="hidden">JavaScript assigned the property "hidden"</div>
+
+    <script>
+      hidden.hidden = true;
+    </script>
   </body>
 </html>
