--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
@@ -37,5 +37,11 @@
         blinking.hidden = !blinking.hidden;
       }, 1000);
     </script>
+
+    <input
+      type="text"
+      id="elem"
+      value="value"
+    />
   </body>
 </html>
