--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
@@ -43,5 +43,11 @@
       id="elem"
       value="value"
     />
+
+    <script>
+      console.log(elem.type);
+      console.log(elem.id);
+      console.log(elem.value);
+    </script>
   </body>
 </html>
