--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/tasks/count-descendants.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/tasks/count-descendants.html
@@ -17,6 +17,14 @@
         </ul>
       </li>
     </ul>
-    <script></script>
+    <script>
+      function func(li) {
+        const title = li.firstChild;
+        const ul = li.querySelector("ul");
+        if (ul) {
+          func(ul.firstElementChild);
+        }
+      }
+    </script>
   </body>
 </html>
