--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/text-content.html
@@ -49,6 +49,7 @@
       console.log(elem.type);
       console.log(elem.id);
       console.log(elem.value);
+      document.body.fir;
     </script>
   </body>
 </html>
