--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/tasks/count-descendants.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/tasks/count-descendants.html
@@ -23,7 +23,9 @@
         console.log(title);
         const ul = li.querySelector("ul");
         if (ul) {
-          func(ul.firstElementChild);
+          for (const elem of ul.children) {
+            func(elem);
+          }
         }
       }
 
