--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/tasks/count-descendants.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/tasks/count-descendants.html
@@ -47,6 +47,11 @@
       function func(li) {
         const title = li.firstChild.data.trim();
         const list = li.querySelector("ul");
+
+        function countDescendants() {}
+
+        const descendants = countDescendants();
+
         console.log(title);
 
         if (list) {
