--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/tasks/Where-is-the--document-in-the-hierarchy.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/tasks/Where-is-the--document-in-the-hierarchy.html
@@ -4,6 +4,8 @@
     <script>
       console.log(document);
       console.log(document.constructor.name);
+
+      console.log(HTMLDocument.prototype.constructor === HTMLDocument);
     </script>
   </body>
 </html>
