--- a/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/tasks/Where-is-the--document-in-the-hierarchy.html
+++ b/part-2-browser-document-events-interfaces/document/node-properties-type-tags-and-contents/tasks/Where-is-the--document-in-the-hierarchy.html
@@ -6,6 +6,10 @@
       console.log(document.constructor.name);
 
       console.log(HTMLDocument.prototype.constructor === HTMLDocument);
+      console.log(document.__proto__.constructor.name);
+      console.log(HTMLDocument.prototype.constructor.name);
+      console.log(HTMLDocument.prototype.constructor.__proto__.name);
+      console.log(HTMLDocument.prototype.constructor.__proto__.__proto__.name);
     </script>
   </body>
 </html>
