--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <body>
+  <body
+    id="test"
+    something="no-standard"
+  >
     <h1>Attributes and Properties</h1>
     <script src="index.js"></script>
   </body>
