--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -3,9 +3,14 @@
   <body
     id="test"
     something="no-standard"
+    type="..."
   >
     <h1>Attributes and Properties</h1>
 
+    <input
+      id="input"
+      type="text"
+    />
     <script>
       console.log(document.body.id);
       // non-standard attribute doesn't yield a property
