--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -11,6 +11,12 @@
       id="input"
       type="text"
     />
+
+    <script>
+      console.log(input.type);
+      console.log(test.type);
+    </script>
+
     <script>
       console.log(document.body.id);
       // non-standard attribute doesn't yield a property
