--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -14,6 +14,8 @@
         const something = document.body.getAttribute("something");
         console.log(something);
       }
+
+      document.body.setAttribute("nome", "zelito");
     </script>
 
     <input
