--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -16,6 +16,10 @@
       }
 
       document.body.setAttribute("nome", "zelito");
+
+      if (document.body.hasAttribute("type")) {
+        document.body.removeAttribute("type");
+      }
     </script>
 
     <input
