--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -18,7 +18,8 @@
       document.body.setAttribute("nome", "zelito");
 
       if (document.body.hasAttribute("type")) {
-        document.body.removeAttribute("type");
+        const type = document.body.removeAttribute("type");
+        console.log(type);
       }
     </script>
 
