--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -19,7 +19,7 @@
 
       if (document.body.hasAttribute("type")) {
         const type = document.body.removeAttribute("type");
-        console.log(type);
+        console.log("type:" + type);
       }
     </script>
 
