--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -18,8 +18,7 @@
       document.body.setAttribute("nome", "zelito");
 
       if (document.body.hasAttribute("type")) {
-        const type = document.body.removeAttribute("type");
-        console.log("type:" + type);
+        document.body.removeAttribute("type");
       }
     </script>
 
