--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -20,6 +20,9 @@
       if (document.body.hasAttribute("type")) {
         document.body.removeAttribute("type");
       }
+
+      const attributes = document.body.attributes;
+      console.log(attributes);
     </script>
 
     <input
