--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -22,7 +22,10 @@
       }
 
       const attributes = document.body.attributes;
-      console.log(attributes);
+
+      for (const attr of attributes) {
+        console.log(attr);
+      }
     </script>
 
     <input
