--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -28,6 +28,11 @@
       }
     </script>
 
+    <div
+      id="elem"
+      about="Elephant"
+    ></div>
+
     <input
       id="input"
       type="text"
