--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -33,6 +33,10 @@
       about="Elephant"
     ></div>
 
+    <script>
+      console.log("ID: " + elem.getAttribute("ID"));
+    </script>
+
     <input
       id="input"
       type="text"
