--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -35,6 +35,7 @@
 
     <script>
       console.log("ID: " + elem.getAttribute("ID"));
+      elem.setAttribute("Test", 123);
     </script>
 
     <input
