--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -36,6 +36,8 @@
     <script>
       console.log("ID: " + elem.getAttribute("ID"));
       elem.setAttribute("Test", 123);
+
+      console.log("TEST: " + elem.getAttribute("TEST"));
     </script>
 
     <input
