--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -38,6 +38,8 @@
       elem.setAttribute("Test", 123);
 
       console.log("TEST: " + elem.getAttribute("TEST"));
+
+      console.log(elem.outerHTML);
     </script>
 
     <input
