--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -5,6 +5,11 @@
     something="no-standard"
     type="..."
   >
+    <label>
+      Name:
+      <input type="text" />
+    </label>
+
     <h1>Attributes and Properties</h1>
 
     <script>
