--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -10,6 +10,14 @@
       <input type="text" />
     </label>
 
+    <script>
+      const input = document.querySelector("input");
+      // attribute => property
+
+      input.setAttribute("id", "id");
+      console.log(input);
+    </script>
+
     <h1>Attributes and Properties</h1>
 
     <script>
