--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -15,7 +15,7 @@
       // attribute => property
 
       input.setAttribute("id", "id");
-      console.log(input);
+      console.log(input.outerHTML);
     </script>
 
     <h1>Attributes and Properties</h1>
