--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -15,7 +15,11 @@
       // attribute => property
 
       input.setAttribute("id", "id");
-      console.log(input.outerHTML);
+      console.log(input.id); // id (updated)
+
+      // property => attribute
+      input.id = "newId";
+      console.log(input.getAttribute("id")); // newId (updated)
     </script>
 
     <h1>Attributes and Properties</h1>
