--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -20,6 +20,10 @@
       // property => attribute
       input.id = "newId";
       console.log(input.getAttribute("id")); // newId (updated)
+
+      // attribute => property
+      input.setAttribute("value", "Zelito");
+      console.log(input.value);
     </script>
 
     <h1>Attributes and Properties</h1>
