--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -23,7 +23,9 @@
 
       // attribute => property
       input.setAttribute("value", "Zelito");
-      console.log(input.value);
+      console.log(input.value); // Zelito
+
+      console.log(input.outerHTML);
     </script>
 
     <h1>Attributes and Properties</h1>
