--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -25,6 +25,10 @@
       input.setAttribute("value", "Zelito");
       console.log(input.value); // Zelito
 
+      // NOT property => attribute
+      input.value = "newValue";
+      console.log(input.getAttribute("value")); // Zelito (not updated!)
+
       console.log(input.outerHTML);
     </script>
 
