--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -25,7 +25,7 @@
 
       // attribute => property
       input.setAttribute("value", ":::Zelito");
-      console.log(input.value); // Zelito
+      console.log(input.value); // :::Zelito
 
       // NOT property => attribute
       input.value = ":::newValue";
