--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -6,6 +6,15 @@
     type="..."
   >
     <label>
+      checkbox
+      <input
+        id="checkbox"
+        type="checkbox"
+        checked
+      />
+    </label>
+
+    <label>
       Name:
       <input type="text" />
     </label>
