--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -14,7 +14,9 @@
       />
     </label>
 
-    <script></script>
+    <script>
+      console.log(checkbox.checked);
+    </script>
 
     <label>
       Name:
