--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -15,6 +15,7 @@
     </label>
 
     <script>
+      console.log(checkbox.getAttribute("checked"));
       console.log(checkbox.checked);
     </script>
 
