--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -12,6 +12,10 @@
       Hello
     </div>
 
+    <script>
+      console.log(div.getAttribute("style"));
+    </script>
+
     <label>
       checkbox
       <input
