--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -14,6 +14,8 @@
 
     <script>
       console.log(div.getAttribute("style"));
+      console.log(div.style["font-size"]);
+      console.log(div.style.color);
     </script>
 
     <label>
