--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -5,6 +5,13 @@
     something="no-standard"
     type="..."
   >
+    <a
+      id="a"
+      href="#hello"
+    >
+      link</a
+    >
+
     <div
       id="div"
       style="color: red; font-size: 120%"
