--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -12,6 +12,11 @@
       link</a
     >
 
+    <script>
+      // attritbute
+      console.log(a.getAttribute("href"));
+    </script>
+
     <div
       id="div"
       style="color: red; font-size: 120%"
