--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -15,6 +15,9 @@
     <script>
       // attritbute
       console.log(a.getAttribute("href"));
+
+      // property
+      console.log(a.href);
     </script>
 
     <div
