--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -9,6 +9,15 @@
     <div show-info="name"></div>
     <!-- and age here -->
     <div show-info="age"></div>
+
+    <script>
+      // the code finds an element with the mark and shows what's requested
+      const user = {
+        name: "Pete",
+        age: 25,
+      };
+    </script>
+
     <a
       id="a"
       href="#hello"
