--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -16,6 +16,10 @@
         name: "Pete",
         age: 25,
       };
+
+      for (const div of document.querySelectorAll("[show-info]")) {
+        // insert the corresponding info into the field
+      }
     </script>
 
     <a
