--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -19,6 +19,7 @@
 
       for (const div of document.querySelectorAll("[show-info]")) {
         // insert the corresponding info into the field
+        console.log(div);
       }
     </script>
 
