--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -5,6 +5,13 @@
     something="no-standard"
     type="..."
   >
+    <div
+      class="order"
+      order-state="new"
+    >
+      A new order
+    </div>
+
     <!-- mark the div to show "name" here -->
     <div show-info="name"></div>
     <!-- and age here -->
