--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -9,7 +9,14 @@
       class="order"
       order-state="new"
     >
-      A new order
+      A new order.
+    </div>
+
+    <div
+      class="order"
+      order-state="pending"
+    >
+      A pending order.
     </div>
 
     <!-- mark the div to show "name" here -->
