--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -19,6 +19,13 @@
       A pending order.
     </div>
 
+    <div
+      class="order"
+      order-state="canceled"
+    >
+      A canceled order.
+    </div>
+
     <!-- mark the div to show "name" here -->
     <div show-info="name"></div>
     <!-- and age here -->
