--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      /* styles rely on the custom attribute "order-state" */
+      .order[order-state="new"] {
+        color: green;
+      }
+    </style>
+  </head>
   <body
     id="test"
     something="no-standard"
