--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -6,6 +6,9 @@
       .order[order-state="new"] {
         color: green;
       }
+      .order[order-state="pending"] {
+        color: blue;
+      }
     </style>
   </head>
   <body
