--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -9,6 +9,9 @@
       .order[order-state="pending"] {
         color: blue;
       }
+      .order[order-state="canceled"] {
+        color: red;
+      }
     </style>
   </head>
   <body
