--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -20,6 +20,10 @@
     type="..."
     data-about="Elephants"
   >
+    <script>
+      console.log("DATA SET", document.body.dataset.about);
+    </script>
+
     <div
       class="order"
       order-state="new"
