--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -20,6 +20,13 @@
     type="..."
     data-about="Elephants"
   >
+    <div
+      class="order"
+      data-order-state="new"
+    >
+      A new order.
+    </div>
+
     <script>
       console.log("DATA SET", document.body.dataset.about);
     </script>
