--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -27,6 +27,13 @@
       A new order.
     </div>
 
+    <div
+      class="order"
+      data-order-state="pending"
+    >
+      A pending order.
+    </div>
+
     <script>
       console.log("DATA SET", document.body.dataset.about);
     </script>
