--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -34,6 +34,13 @@
       A pending order.
     </div>
 
+    <div
+      class="order"
+      data-order-state="canceled"
+    >
+      A canceled order.
+    </div>
+
     <script>
       console.log("DATA SET", document.body.dataset.about);
     </script>
