--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -7,7 +7,8 @@
       .order[data-order-state="new"] {
         color: green;
       }
-      .order[order-state="pending"] {
+      .order[order-state="pending"],
+      .order[data-order-state="pending"] {
         color: blue;
       }
       .order[order-state="canceled"] {
