--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -11,7 +11,8 @@
       .order[data-order-state="pending"] {
         color: blue;
       }
-      .order[order-state="canceled"] {
+      .order[order-state="canceled"],
+      .order[data-order-state="canceled"] {
         color: red;
       }
     </style>
