--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -45,6 +45,8 @@
     </div>
 
     <script>
+      // read
+      console.log(document.querySelectorAll("[data-order-state]"));
       console.log("DATA SET", document.body.dataset.about);
     </script>
 
