--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/index.html
@@ -48,6 +48,10 @@
     <script>
       // read
       console.log(order.dataset.orderState);
+
+      // modify
+      order.dataset.orderState = "pending";
+
       console.log("DATA SET", document.body.dataset.about);
     </script>
 
