--- a/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/get-the-attribute.html
+++ b/part-2-browser-document-events-interfaces/document/attributes-and-properties/tasks/get-the-attribute.html
@@ -2,5 +2,9 @@
 <html>
   <body>
     <div data-widget-name="menu">Choose the genre</div>
+
+    <script>
+      const div = document.querySelector("[data-widget-name]");
+    </script>
   </body>
 </html>
